[package]
name = "pdf2svg"
version = "0.1.0"
edition = "2021"

[dependencies]

clap = { version = "4.5.4", features = ["derive"] }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder" }
pathfinder_color = { git = "https://github.com/servo/pathfinder" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder" }
pathfinder_content = { git = "https://github.com/servo/pathfinder" }
pathfinder_export = { git = "https://github.com/servo/pathfinder" }
pdf = "0.9.0"
#lopdf = "0.32"
svg  = "0.17"
itertools = "0.12"
tiny-skia = "0.11"
