[package]
name = "pdf2svg"
version = "0.1.0"
edition = "2021"

[features]
#default = ["egl", "glx", "x11", "wayland", "wgl"]
default = ["glx", "x11", "wayland"]
#egl = ["glutin-winit/egl", "png"]
glx = ["glutin-winit/glx"]
# wgl = ["glutin-winit/wgl"]
x11 = ["glutin-winit/x11"]
wayland = ["glutin-winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

[dependencies]

clap = { version = "4.5.4", features = ["derive"] }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder" }
pathfinder_color = { git = "https://github.com/servo/pathfinder" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder" }
pathfinder_content = { git = "https://github.com/servo/pathfinder" }
pathfinder_export = { git = "https://github.com/servo/pathfinder" }

pathfinder_gl = { git = "https://github.com/servo/pathfinder" }
pathfinder_gpu = { git = "https://github.com/servo/pathfinder" }
pathfinder_canvas = { git = "https://github.com/servo/pathfinder" }
image = "0.25"
# surfman = { git = "https://github.com/servo/surfman", rev = "f3df871ac8c3926fe9106d86a3e51e20aa50d3cc", features = ["sm-winit", "sm-x11"] }
euclid = "0.22"
gl = "0.14"
#surfman = { git = "https://github.com/servo/surfman" }
surfman = "0.9.3"

glutin = { path = "../glutin/glutin", default-features = false }
glutin-winit = { path = "../glutin/glutin-winit", default-features = false }
png = { version = "0.17.6" }
raw-window-handle = "0.5"
winit = { version = "0.29.2", default-features = false, features = ["rwh_05"] }

pdf = "0.9.0"
#lopdf = "0.32"
svg  = "0.17"
itertools = "0.12"
tiny-skia = "0.11"

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.1.1"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.29.2", default-features = false, features = ["android-native-activity", "rwh_05"] }
